@@ -37,61 +37,9 @@
         <td>Enable part</td>
       </tr>
       <tr>
-        <td>enableAdd</td>
-        <td>0,1</td>
-        <td>1</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>32,255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Enable AddSynth</td>
-      </tr>
-      <tr>
-        <td>enableSub</td>
-        <td>0,1</td>
-        <td>2</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>32,255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Enable SubSynth</td>
-      </tr>
-      <tr>
-        <td>enablePad</td>
-        <td>0,1</td>
-        <td>3</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>32,255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Enable PadSynth</td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
         <td>volume</td>
         <td>0~127</td>
-        <td>10</td>
+        <td>1</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -104,7 +52,7 @@
       <tr>
         <td>velocitySense</td>
         <td>0~127</td>
-        <td>11</td>
+        <td>2</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -117,7 +65,7 @@
       <tr>
         <td>panning</td>
         <td>0~127</td>
-        <td>12</td>
+        <td>3</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -130,7 +78,7 @@
       <tr>
         <td>velocityOffset</td>
         <td>0~127</td>
-        <td>13</td>
+        <td>4</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -143,7 +91,7 @@
       <tr>
         <td>midiChannel</td>
         <td>0~16</td>
-        <td>14</td>
+        <td>5</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -156,7 +104,7 @@
       <tr>
         <td>omni</td>
         <td>0,1</td>
-        <td>15</td>
+        <td>6</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -167,48 +115,9 @@
         <td>Enable Omni mode</td>
       </tr>
       <tr>
-        <td>keyMode</td>
-        <td>0~2</td>
-        <td>16</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Mode -- Poly, Mono, Legato</td>
-      </tr>
-      <tr>
-        <td>channelATset</td>
-        <td>0~127</td>
-        <td>17</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255<br>ret. 0~127</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Channel aftertouch -- off, filter cutoff + filter Q<br>+ pitchbend + modulation</td>
-      </tr>
-      <tr>
-        <td>keyATset</td>
-        <td>0,127</td>
-        <td>18</td>
-        <td>0~63</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255<br>ret. 0~127</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Key aftertouch -- off, filter cutoff + filter Q<br>+ pitchbend + modulation</td>
-      </tr>
-      <tr>
         <td>minNote</td>
         <td>0~126</td>
-        <td>19</td>
+        <td>7</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -221,7 +130,7 @@
       <tr>
         <td>maxNote</td>
         <td>1~127</td>
-        <td>20</td>
+        <td>8</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -234,7 +143,7 @@
       <tr>
         <td>minToLast</td>
         <td>~ ~</td>
-        <td>21</td>
+        <td>9</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -247,7 +156,7 @@
       <tr>
         <td>maxToLast</td>
         <td>~ ~</td>
-        <td>22</td>
+        <td>10</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -260,7 +169,7 @@
       <tr>
         <td>resetMinMaxKey</td>
         <td>~ ~</td>
-        <td>23</td>
+        <td>11</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -273,7 +182,7 @@
       <tr>
         <td>maxNotes</td>
         <td>1~60</td>
-        <td>24</td>
+        <td>12</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -286,7 +195,7 @@
       <tr>
         <td>keyShift</td>
         <td>-36~36</td>
-        <td>25</td>
+        <td>13</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -299,7 +208,7 @@
       <tr>
         <td>partToSystemEffect1</td>
         <td>0~127</td>
-        <td>26</td>
+        <td>14</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -312,7 +221,7 @@
       <tr>
         <td>partToSystemEffect2</td>
         <td>0~127</td>
-        <td>27</td>
+        <td>15</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -325,7 +234,7 @@
       <tr>
         <td>partToSystemEffect3</td>
         <td>0~127</td>
-        <td>28</td>
+        <td>16</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -338,7 +247,7 @@
       <tr>
         <td>partToSystemEffect4</td>
         <td>0~127</td>
-        <td>29</td>
+        <td>17</td>
         <td>0~63</td>
         <td>255</td>
         <td>255</td>
@@ -347,6 +256,139 @@
         <td>255</td>
         <td>255</td>
         <td>Part output to System Effect 4</td>
+      </tr>
+      <tr>
+        <td>kitItemMute</td>
+        <td>0,1</td>
+        <td>25</td>
+        <td>0~63</td>
+        <td>0~15</td>
+        <td>255</td>
+        <td>32</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Mute this kit line</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+      <tr>
+        <td colspan="11">None of the above mark instrument changed</td>
+      </tr>
+      <tr>
+        <td>enableKitLine</td>
+        <td>0,1</td>
+        <td>26</td>
+        <td>1~63</td>
+        <td>0~15</td>
+        <td>255</td>
+        <td>32</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Kit item enable (can't disable item 0)</td>
+      </tr>
+        <td>enableAdd</td>
+        <td>0,1</td>
+        <td>27</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>32,255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Enable AddSynth</td>
+      </tr>
+      <tr>
+        <td>enableSub</td>
+        <td>0,1</td>
+        <td>28</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>32,255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Enable SubSynth</td>
+      </tr>
+      <tr>
+        <td>enablePad</td>
+        <td>0,1</td>
+        <td>29</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>32,255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Enable PadSynth</td>
+      </tr>
+      <tr>
+        <td>keyMode</td>
+        <td>0~2</td>
+        <td>30</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Mode -- Poly, Mono, Legato</td>
+      </tr>
+      <tr>
+        <td>channelATset</td>
+        <td>0~127</td>
+        <td>31</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255<br>ret. 0~127</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Channel aftertouch -- off, filter cutoff + filter Q<br>+ pitchbend + modulation</td>
+      </tr>
+      <tr>
+        <td>keyATset</td>
+        <td>0,127</td>
+        <td>32</td>
+        <td>0~63</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255</td>
+        <td>255<br>ret. 0~127</td>
+        <td>255</td>
+        <td>255</td>
+        <td>Key aftertouch -- off, filter cutoff + filter Q<br>+ pitchbend + modulation</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>effectNumber</td>
@@ -437,7 +479,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Mode -- Off, Multi, Single, Crossfade</td>
+        <td>Mode -- Off, Multi, Single,<br>Crossfade velocity, Crossfade volume</td>
       </tr>
       <tr>
         <td>kitEffectNum</td>
@@ -663,7 +705,7 @@
       <tr>
         <td colspan="11">Kit level controls</td>
       </tr>
-       <tr>
+      <tr>
         <td>enable</td>
         <td>0,1</td>
         <td>1~3</td>
@@ -675,31 +717,8 @@
         <td>255</td>
         <td>255</td>
         <td>Kit item engine enable<br>AddSynth, SubSynth, PadSynth</td>
-       <tr>
-        <td>enableKitLine</td>
-        <td>0,1</td>
-        <td>4</td>
-        <td>1~63</td>
-        <td>0~15</td>
-        <td>255</td>
-        <td>32</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Kit item enable (can't disable item 0)</td>
-       <tr>
-        <td>kitItemMute</td>
-        <td>0,1</td>
-        <td>5</td>
-        <td>0~63</td>
-        <td>0~15</td>
-        <td>255</td>
-        <td>32</td>
-        <td>255</td>
-        <td>255</td>
-        <td>255</td>
-        <td>Mute this kit line</td>
-       <tr>
+      </tr>
+      <tr>
         <td>minNote</td>
         <td>~ ~</td>
         <td>19</td>
@@ -711,7 +730,8 @@
         <td>255</td>
         <td>255</td>
         <td>Kit item min note</td>
-       <tr>
+      </tr>
+      <tr>
         <td>maxNote</td>
         <td>~ ~</td>
         <td>20</td>
@@ -723,7 +743,8 @@
         <td>255</td>
         <td>255</td>
         <td>Kit item max note</td>
-       <tr>
+      </tr>
+      <tr>
         <td>minToLastKey</td>
         <td>~ ~</td>
         <td>21</td>
@@ -735,7 +756,8 @@
         <td>255</td>
         <td>255</td>
         <td>Kit item min to last key press</td>
-       <tr>
+      <tr>
+      <tr>
         <td>maxToLastKey</td>
         <td>~ ~</td>
         <td>22</td>
