@@ -1,8 +1,13 @@
 yoshimi 2.3.5.3
 
+2026-02-5 Will
+bn 2417
+Included Improved Crossfade from Kristian.
+Updated dev_notes.
+
 2026-01-17 Will
 bn 2416
-Changing partlevel controls are no linger marked as instriment changed.
+Changing partlevel controls are no longer marked as instriment changed.
 
 2026-01-17 Will
 bn 2415
